--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,90 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golbey - Accueil</title>
-    <style>
-        /* Styles généraux */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        section {
-            padding: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Golbey</h1>
-        <nav>
-            <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#a-propos">À Propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="accueil">
-        <h2>Bienvenue chez Golbey</h2>
-        <!-- Contenu de la section d'accueil -->
-    </section>
-    
-    <section id="a-propos">
-        <h2>À Propos de Golbey</h2>
-        <p>
-            Golbey est une société spécialisée dans le développement d'applications de messagerie, de jeux et de logiciels de cryptographie.
-        </p>
-        <p><h2>!Important!</h2></p>
-        <p>
-            la société Golbey ne possède aucun compte sur Telegram, Instagram ou Facebook. Notre équipe ne communique qu'à travers des emails et aucun de nos agents ne vous demandera des informations personnelles ou de l'argent pour quelque raison que ce soit, que ce soit pour un emploi au sein de notre société, une maintenance ou un achat. La plupart de nos achats se font directement via notre application ou sur un site où notre application ou logiciel est disponible à la vente. Pour des raisons de sécurité, aucun de nos agents ne possède de compte Telegram, Instagram, Facebook ou d'email personnel lié à notre société pour vous contacter.
-            Veuillez envoyer des messages uniquement à cette adresse pour les achats, la maintenance ou un emploi au sein de notre entreprise.
-            
-        </p>
-        
-    </section>
-    
-
-    <section id="contact">
-        <h2>Contactez-nous</h2>
-        <p>Pour nous contacter, veuillez envoyer un email à <a href="mailto:iamgolbey@gmail.com">iamgolbey@gmail.com</a>.</p>
-    </section>
-
-    <footer>
-        <!-- Contenu du pied de page -->
-        <p>&copy; 2024 Golbey. Tous droits réservés.</p>
-    </footer>
-</body>
-</html>
+title: "Golbey"
+description: "Site web de la société Golbey"
+author: "Golbey28"
